# bagiel

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Color.hpp  Input.cpp  Input.hpp  Rectangle.hpp  Renderer.hpp  Shader.hpp  Vector2.hpp  Vertex.hpp  Window.hpp
shaders/: shader.frag  shader.vert
src/: Color.cpp  Input.cpp  Rectangle.cpp  Renderer.cpp  Shader.cpp  Vector2.cpp  Window.cpp
